--- a/mscore/mscore/boxproperties.ui
+++ b/mscore/mscore/boxproperties.ui
@@ -31,7 +31,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="mscore.qrc">:/data/bg1.jpg</pixmap>
+        <pixmap resource="musescore.qrc">:/data/bg1.jpg</pixmap>
        </property>
       </widget>
      </item>
@@ -289,7 +289,7 @@
   <tabstop>dialogButtonBox</tabstop>
  </tabstops>
  <resources>
-  <include location="mscore.qrc"/>
+  <include location="musescore.qrc"/>
  </resources>
  <connections>
   <connection>
