--- a/mscore/mscore/editstaff.ui
+++ b/mscore/mscore/editstaff.ui
@@ -41,7 +41,7 @@
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="mscore.qrc">:/data/bg1.jpg</pixmap>
+      <pixmap resource="musescore.qrc">:/data/bg1.jpg</pixmap>
      </property>
      <property name="scaledContents">
       <bool>false</bool>
@@ -250,7 +250,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="mscore.qrc">
+           <iconset resource="musescore.qrc">
             <normaloff>:/data/table.svg</normaloff>:/data/table.svg</iconset>
           </property>
          </widget>
@@ -275,7 +275,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="mscore.qrc">
+           <iconset resource="musescore.qrc">
             <normaloff>:/data/table.svg</normaloff>:/data/table.svg</iconset>
           </property>
          </widget>
@@ -313,7 +313,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="mscore.qrc">
+           <iconset resource="musescore.qrc">
             <normaloff>:/data/table.svg</normaloff>:/data/table.svg</iconset>
           </property>
          </widget>
@@ -338,7 +338,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="mscore.qrc">
+           <iconset resource="musescore.qrc">
             <normaloff>:/data/table.svg</normaloff>:/data/table.svg</iconset>
           </property>
          </widget>
@@ -604,7 +604,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="mscore.qrc"/>
+  <include location="musescore.qrc"/>
  </resources>
  <connections>
   <connection>
