--- a/mscore/mscore/measureproperties.ui
+++ b/mscore/mscore/measureproperties.ui
@@ -31,7 +31,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="mscore.qrc">:/data/bg1.jpg</pixmap>
+        <pixmap resource="musescore.qrc">:/data/bg1.jpg</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
@@ -436,7 +436,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="mscore.qrc"/>
+  <include location="musescore.qrc"/>
  </resources>
  <connections>
   <connection>
