--- a/mscore/mscore/slurproperties.ui
+++ b/mscore/mscore/slurproperties.ui
@@ -28,7 +28,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="mscore.qrc">:/data/bg1.jpg</pixmap>
+        <pixmap resource="musescore.qrc">:/data/bg1.jpg</pixmap>
        </property>
       </widget>
      </item>
@@ -89,7 +89,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="mscore.qrc"/>
+  <include location="musescore.qrc"/>
  </resources>
  <connections>
   <connection>
