--- a/mscore/mscore/splitstaff.ui
+++ b/mscore/mscore/splitstaff.ui
@@ -34,7 +34,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="mscore.qrc">:/data/bg1.jpg</pixmap>
+        <pixmap resource="musescore.qrc">:/data/bg1.jpg</pixmap>
        </property>
       </widget>
      </item>
@@ -124,7 +124,7 @@
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources>
-  <include location="mscore.qrc"/>
+  <include location="musescore.qrc"/>
  </resources>
  <connections>
   <connection>
