--- a/mscore/mscore/tupletdialog.ui
+++ b/mscore/mscore/tupletdialog.ui
@@ -29,7 +29,7 @@
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="mscore.qrc">:/data/bg1.jpg</pixmap>
+      <pixmap resource="musescore.qrc">:/data/bg1.jpg</pixmap>
      </property>
     </widget>
    </item>
@@ -243,7 +243,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="mscore.qrc"/>
+  <include location="musescore.qrc"/>
  </resources>
  <connections>
   <connection>
