--- a/mscore/mscore/articulation.ui
+++ b/mscore/mscore/articulation.ui
@@ -35,6 +35,89 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
+        <widget class="QGroupBox" name="groupBox">
+         <property name="title">
+          <string>Appearance</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="QLabel" name="label">
+            <property name="text">
+             <string>Direction:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+            <property name="indent">
+             <number>5</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="direction">
+            <item>
+             <property name="text">
+              <string>Auto</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Up</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Down</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>Anchor:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+            <property name="indent">
+             <number>5</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="anchor">
+            <item>
+             <property name="text">
+              <string>Top Staff</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Bottom Staff</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Chord Direction</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Top Chord</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Bottom Chord</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
         <widget class="QGroupBox" name="channelChange">
          <property name="title">
           <string>Channel</string>
