- fix #12047 - new: page selector for page settings preview

--- a/mscore/player-qt/mscoreplay.qrc
+++ b/mscore/player-qt/mscoreplay.qrc
@@ -24,5 +24,6 @@
       <file>mobile/images/titlebar.png</file>
       <file>mobile/images/toolbutton.sci</file>
       <file>mobile/images/toolbutton.png</file>
+      <file alias="mobile/images/paper5.png">../share/wallpaper/paper5.png</file>
    </qresource>
 </RCC>
