--- a/mscore/player-ios/mscoreplay.qrc
+++ b/mscore/player-ios/mscoreplay.qrc
@@ -3,8 +3,29 @@
    <qresource prefix="/">
       <file alias="fonts/mscore20.xml">../fonts/mscore20.xml</file>
       <file alias="fonts/gonville.xml">../fonts/gonville.xml</file>
+      <file alias="fonts/gonville-20.otf">../fonts/gonville-20.otf</file>
+      <file alias="fonts/mscore-20.otf">../fonts/mscore-20.otf</file>
+      <file alias="fonts/mscore1-20.ttf">../fonts/mscore1-20.ttf</file>
+      <file alias="fonts/MuseJazz.ttf">../fonts/MuseJazz.ttf</file>
+      <file alias="fonts/FreeSerifMscore.ttf">../fonts/FreeSerifMscore.ttf</file>
+      <file alias="fonts/FreeSerifBold.ttf">../fonts/FreeSerifBold.ttf</file>
+      <file alias="fonts/FreeSans.ttf">../fonts/FreeSans.ttf</file>
+      <file alias="fonts/mscore_tab_baroque.ttf">../fonts/mscore_tab_baroque.ttf</file>
+      <file alias="fonts/mscore_tab_modern.ttf">../fonts/mscore_tab_modern.ttf</file>
+      <file alias="fonts/mscore_tab_renaiss.ttf">../fonts/mscore_tab_renaiss.ttf</file>
+      <file alias="fonts/mscore_tab_renaiss2.ttf">../fonts/mscore_tab_renaiss2.ttf</file>
+
       <file alias="scores/promenade.mscz">../demos/promenade.mscz</file>
       <file alias="scores/schnee.mscz">../demos/schnee.mscz</file>
       <file alias="scores/italian-1.mscz">../demos/italian-1.mscz</file>
+
+      <file alias="mplayer.qml">../player-qt/mplayer.qml</file>
+      <file alias="mobile/ToolBar.qml>../player-qt/mobile/ToolBar.qml</file>
+      <file alias="mobile/Button.qml>../player-qt/mobile/Button.qml</file>
+      <file alias="mobile/images/titlebar.sci>../player-qt/mobile/images/titlebar.sci</file>
+      <file alias="mobile/images/titlebar.png>../player-qt/mobile/images/titelbar.png</file>
+      <file alias="mobile/images/toolbutton.sci>../player-qt/mobile/images/toolbutton.sci</file>
+      <file alias="mobile/images/toolbutton.png>../player-qt/mobile/images/toolbutton.png</file>
+      <file alias="mobile/images/paper5.png">../share/wallpaper/paper5.png</file>
    </qresource>
 </RCC>
