--- a/mscore/player-qt/mscoreplay.qrc
+++ b/mscore/player-qt/mscoreplay.qrc
@@ -29,6 +29,6 @@
       <file>mobile/images/toolbutton.png</file>
       <file>mobile/images/gloss.png</file>
       <file>mobile/images/stripes.png</file>
-      <file alias="mobile/images/paper5.png">../share/wallpaper/paper5.png</file>
+      <file alias="mobile/images/paper.png">../share/wallpaper/paper1.png</file>
    </qresource>
 </RCC>
